@@ -100,3 +100,4 @@ base_format         <format/>       changes the text of log messages...
 base_stderr         <stderr/>       Only valid in log instances
 base_stdout         <stdout/>       packets get copied to stdout for this instance
 base_to             <to/>           Only valid in log instances for sending to a jid
+base_unsubscribe    <unsubscribe/>  Unsubscribe to received presences
