@@ -1,5 +1,5 @@
 noinst_LTLIBRARIES = libjabberdbase.la
 
-libjabberdbase_la_SOURCES = base_accept.c base_dynamic.c base_file.c base_stderr.c base_to.c base_connect.c base_exec.c base_format.c base_stdout.c base_syslog.c
+libjabberdbase_la_SOURCES = base_accept.c base_dynamic.c base_file.c base_stderr.c base_to.c base_connect.c base_exec.c base_format.c base_stdout.c base_syslog.c base_unsubscribe.c
 libjabberdbase_la_LDFLAGS = @LDFLAGS@
 INCLUDES = -I.. -I../lib
